<package format="2">
  <name>1100331_robot</name>
  <version>0.0.1</version>
  <description>Warehouse transport robot with lidar, camera, arm</description>

  <maintainer email="user@example.com">Student</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf</depend>
  <depend>xacro</depend>
  <depend>urdf</depend>
  <depend>teleop_twist_keyboard</depend>
  <depend>gmapping</depend>
  <depend>robot_state_publisher</depend>
  <depend>joint_state_publisher</depend>

  <export></export>
</package>
